@@ -1,3 +1,12 @@
+2004-07-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* doc/api/malloc.dox: Document realloc() internals.
+	* include/stdlib.h: include realloc().
+	* libc/stdlib/Makefile.am: include realloc.c.
+	* libc/stdlib/malloc.c: move out shared parts to stdlib_private.h.
+	* libc/stdlib/stdlib_private.h: [new] shared file for malloc()/realloc().
+	* libc/stdlib/realloc.c: [new] implementation of realloc().
+
 2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* include/avr/sleep.h: protect function-like macros, fix savannah bug #9013.
